--- a/pf_driver/CMakeLists.txt
+++ b/pf_driver/CMakeLists.txt
@@ -56,7 +56,7 @@ add_executable(ros_main src/ros/ros_main.cpp
                         src/pf/pf_packet.cpp
                         src/communication.cpp)
 target_link_libraries(ros_main
-  ${catkin_LIBRARIES} curlpp curl jsoncpp unofficial::curlpp::curlpp
+  ${catkin_LIBRARIES} unofficial::curlpp::curlpp
 )
 add_dependencies(ros_main ${PROJECT_NAME}_gencfg)
 add_dependencies(ros_main ${${PROJECT_NAME}_EXPORTED_TARGETS})
